Fix content wrap on recipe cards

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Universal */
 
 * {
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 body, html {
@@ -57,19 +57,19 @@ main {
 
 .recipe__container {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 1rem;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .recipe__card {
-    width: 30%;
+    flex-shrink: 0;
+    width: 400px;
     height: 40vh;
     margin: 1rem;
-    flex-wrap: wrap;
     text-align: center;
     background-color: lightblue;
-    flex-shrink: 0;
+    color: ivory;
+    text-shadow: 1px 1px 2px black;
 }
 
 .recipe__card h3 {
